--- a/car_rental/templates/car_rental/checkout.html
+++ b/car_rental/templates/car_rental/checkout.html
@@ -52,9 +52,9 @@
                     สแกน Line OA เพื่อรับการแจ้งเตือนสถานะการจองและการชำระเงิน
                 </p>
 
-                <button class="w-full bg-[#48a9b9] hover:bg-[#3ba0b0] text-white text-xl font-medium py-3 shadow-lg transition">
+                <a href="{% url 'payment' car.id %}"class="w-full bg-[#48a9b9] hover:bg-[#3ba0b0] text-white text-xl font-medium py-3 shadow-lg transition">
                     <i class="fas fa-money-bill-wave mr-2"></i> จ่ายเงิน
-                </button>
+                </a>
                 
             </div>
         </div>
