--- a/car_rental/templates/car_rental/dashboard.html
+++ b/car_rental/templates/car_rental/dashboard.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gray-100">
 
-    {% include 'users/navbar.html' %}
+    {% include 'car_rental/navbar_detail.html' %}
 
     <div class="container mx-auto flex flex-col md:flex-row p-4 md:p-8 gap-8">
 
