--- a/car_rental/templates/car_rental/user_info.html
+++ b/car_rental/templates/car_rental/user_info.html
@@ -52,7 +52,7 @@
                         </div>
                     </div>
 
-                    <form method="POST" action="{% url 'login' %}"> 
+                    <form method="POST" action=""> 
                         {% csrf_token %}
                         <div class="space-y-5 max-w-md">
                             <div>
@@ -83,7 +83,7 @@
                 <div id="guest-form-mode" class="hidden">
                     <h2 class="text-2xl font-medium text-gray-800 mb-6">กรอกข้อมูลลูกค้าทั่วไป</h2>
                     
-                    <form method="POST" action="{% url 'checkout' car.id %}"> {% csrf_token %}
+                    <form method="POST" action=""> {% csrf_token %}
                         <div class="space-y-5 max-w-md">
                             
                             <div>
