--- a/users/templates/users/sidebar.html
+++ b/users/templates/users/sidebar.html
@@ -10,9 +10,9 @@
        แดชบอร์ด
     </a>
 
-    <a href="#" 
+    <a href="{% url 'booking_requests' %}" 
        class="p-3 rounded-lg font-semibold
-       {% if request.resolver_match.url_name == 'my_bookings' %}
+       {% if request.resolver_match.url_name == 'booking_requests' %}
            bg-warp-blue text-white
        {% else %}
            bg-gray-200 text-gray-800 hover:bg-gray-300
